--- a/HW1/HW1-uni.ipynb
+++ b/HW1/HW1-uni.ipynb
@@ -27,11 +27,11 @@
    "source": [
     "Write down the UNIs of your group (if applicable)\n",
     "\n",
-    "Member 1: Name, UNI\n",
+    "Member 1: Wilson Lui, wl2522\n",
     "\n",
-    "Member 2: Name, UNI\n",
+    "Member 2: Vanessa Saldana Fountain, vsf2106\n",
     "\n",
-    "Member 3: Name, UNI"
+    "Member 3: Craig Brandon Barretto, cbb2151"
    ]
   },
   {
@@ -59,6 +59,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "run_control": {
      "frozen": false,
      "read_only": false
