finished dropout function

--- a/HW1/HW1-uni.ipynb
+++ b/HW1/HW1-uni.ipynb
@@ -59,7 +59,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2017-09-29T21:17:25.974512",
+     "start_time": "2017-09-29T21:17:25.910450"
+    },
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -124,7 +127,9 @@
     "            A is matrix after applying dropout\n",
     "            M is dropout mask, used in the backward pass\n",
     "        \"\"\"\n",
-    "\n",
+    "        M = np.random.binomial(1, 1 - prob, A.shape)\n",
+    "        A = np.where(M == 1, A, 0)\n",
+    "        \n",
     "        return A, M\n",
     "\n",
     "    def forwardPropagation(self, X):\n",
