--- a/HW1/HW1-uni.ipynb
+++ b/HW1/HW1-uni.ipynb
@@ -63,6 +63,7 @@
      "end_time": "2017-09-29T21:17:25.974512",
      "start_time": "2017-09-29T21:17:25.910450"
     },
+    "collapsed": true,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -231,6 +232,7 @@
     "        \n",
     "        for i in range(0, iters):\n",
     "            # get minibatch\n",
+    "            minibatch = get_batch(X,y,batch_size)\n",
     "            \n",
     "            # forward prop\n",
     "\n",
@@ -258,6 +260,11 @@
     "        :parma batch_size: minibatch size\n",
     "        :returns: (tuple) X_batch, y_batch\n",
     "        \"\"\"\n",
+    "        num_samples = len(X[0])\n",
+    "        idx = np.random.randint(num_samples, size=batch_size)\n",
+    "        \n",
+    "        X_batch = X[:,idx]\n",
+    "        y_batch = y[idx]\n",
     "\n",
     "        return X_batch, y_batch"
    ]
@@ -525,7 +532,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -539,7 +546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
