--- a/HW1/HW1-uni.ipynb
+++ b/HW1/HW1-uni.ipynb
@@ -57,18 +57,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-09-29T21:17:25.974512",
-     "start_time": "2017-09-29T21:17:25.910450"
+     "end_time": "2017-09-30T21:01:50.263907",
+     "start_time": "2017-09-30T21:01:50.148796"
     },
     "run_control": {
      "frozen": false,
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-2-bef933227d5d>, line 46)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-2-bef933227d5d>\"\u001b[1;36m, line \u001b[1;32m46\u001b[0m\n\u001b[1;33m    def relu(self, X):\u001b[0m\n\u001b[1;37m      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "class NeuralNetwork(object):\n",
     "    \"\"\"\n",
@@ -85,10 +94,15 @@
     "        \"\"\"\n",
     "        np.random.seed(1)\n",
     "        \n",
-    "        self.parameters = {}\n",
+    "        self.parameters = {'num_layers': self.num_layers,\n",
+    "                           'drop_prob': self.drop_prob,\n",
+    "                           'reg_lambda': self.reg_lambda}\n",
     "        self.num_layers = len(layer_dimensions)\n",
     "        self.drop_prob = drop_prob\n",
     "        self.reg_lambda = reg_lambda\n",
+    "        \n",
+    "        self.weights = [np.random.randn(layer_dimensions[layer + 1], layer_dimensions[layer]) for layer in range(num_layers)]\n",
+    "        self.biases = [np.random.randn(layer, 1) for layer in layer_dimensions[1:]]\n",
     "        \n",
     "        # init parameters\n",
     "        \n",
@@ -113,7 +127,8 @@
     "        :returns: activation(A)\n",
     "        \"\"\" \n",
     "        if activation == 'relu':\n",
-    "            return relu(A)\n",
+    "            \n",
+    "            return relu(dropout(self, A, self.drop_prob)[0])\n",
     "\n",
     "    def relu(self, X):\n",
     "        return np.maximum(0, X)\n",
