finished __init__ function

--- a/HW1/HW1-uni.ipynb
+++ b/HW1/HW1-uni.ipynb
@@ -246,6 +246,7 @@
     "        \n",
     "        for i in range(0, iters):\n",
     "            # get minibatch\n",
+    "            minibatch = get_batch(X,y,batch_size)\n",
     "            \n",
     "            # forward prop\n",
     "\n",
