just adding else case to activationForward

--- a/HW1/HW1-uni.ipynb
+++ b/HW1/HW1-uni.ipynb
@@ -128,8 +128,9 @@
     "        :returns: activation(A)\n",
     "        \"\"\" \n",
     "        if activation == 'relu':\n",
-    "            \n",
     "            return relu(dropout(self, A, self.drop_prob)[0])\n",
+    "        else:\n",
+    "            return dropout(self, A, self.drop_prob)[0]\n",
     "\n",
     "    def relu(self, X):\n",
     "        return np.maximum(0, X)\n",
