filled in forwardPropagation

--- a/HW1/HW1-uni.ipynb
+++ b/HW1/HW1-uni.ipynb
@@ -116,8 +116,9 @@
     "        :returns: the affine product WA + b, along with the cache required for the backward pass\n",
     "        \"\"\"\n",
     "        Z = np.matmul(W, A) + b\n",
+    "        cache = \"\" #need to figure out what goes in cache\n",
     "        \n",
-    "        return Z\n",
+    "        return Z, cache\n",
     "        \n",
     "\n",
     "    def activationForward(self, A, activation=\"relu\"):\n",
@@ -161,6 +162,16 @@
     "                     are needed in further steps\n",
     "        \"\"\"\n",
     "\n",
+    "        weights = self.weights\n",
+    "        biases = self.biases\n",
+    "        \n",
+    "        cache = []\n",
+    "        AL = X #do we have to activate X before running as well?\n",
+    "        for i in range(self.num_layers):\n",
+    "            h, c = affineForward(AL, weights[i], biases[i])\n",
+    "            cache.append(c)\n",
+    "            AL = activationForward(h)\n",
+    "        \n",
     "        return AL, cache\n",
     "    \n",
     "    def costFunction(self, AL, y):\n",
