--- a/HW1/HW1-uni.ipynb
+++ b/HW1/HW1-uni.ipynb
@@ -200,7 +200,16 @@
     "                 dW: gradient on the weights\n",
     "                 db: gradient on the bias\n",
     "        \"\"\"\n",
-    "\n",
+    "        #fully connected layer with no non-linear activation function \n",
+    "        #dot product between inputs and weights\n",
+    "        \n",
+    "        A = cache[0]\n",
+    "        W = cache[1]\n",
+    "        b = cache[2]\n",
+    "        \n",
+    "        dA = dA_prev.dot(dW.T).reshape(A.shape[0])\n",
+    "        dW = A.reshape(A.shape[0], -1).T.dot(dA_prev)\n",
+    "        db = np.sum(dA_prev, axis = 0)\n",
     "        return dA, dW, db\n",
     "\n",
     "    def activationBackward(self, dA, cache, activation=\"relu\"):\n",
@@ -559,9 +568,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python3"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -573,7 +582,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
