adding cache to affineForward

--- a/HW1/HW1-uni.ipynb
+++ b/HW1/HW1-uni.ipynb
@@ -116,7 +116,7 @@
     "        :returns: the affine product WA + b, along with the cache required for the backward pass\n",
     "        \"\"\"\n",
     "        Z = np.matmul(W, A) + b\n",
-    "        cache = \"\" #need to figure out what goes in cache\n",
+    "        cache = [A,W,b]\n",
     "        \n",
     "        return Z, cache\n",
     "        \n",
@@ -568,9 +568,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -582,7 +582,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
