made the dropout function (hopefully) more efficient

--- a/HW1/HW1-uni.ipynb
+++ b/HW1/HW1-uni.ipynb
@@ -36,8 +36,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-10-04T00:48:45.550979",
+     "start_time": "2017-10-04T00:48:45.512943"
+    },
     "collapsed": true,
     "run_control": {
      "frozen": false,
@@ -146,7 +150,7 @@
     "            M is dropout mask, used in the backward pass\n",
     "        \"\"\"\n",
     "        M = np.random.binomial(1, 1 - prob, A.shape)\n",
-    "        A = np.where(M == 1, A, 0)\n",
+    "        A = M*A\n",
     "        \n",
     "        return A, M\n",
     "\n",
@@ -568,7 +572,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -582,7 +586,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
