started costFunction, made a small fix to forwardPropagation

--- a/HW1/HW1-uni.ipynb
+++ b/HW1/HW1-uni.ipynb
@@ -120,7 +120,7 @@
     "        :returns: the affine product WA + b, along with the cache required for the backward pass\n",
     "        \"\"\"\n",
     "        Z = np.matmul(W, A) + b\n",
-    "        cache = [A,W,b]\n",
+    "        cache = [A, W, b]\n",
     "        \n",
     "        return Z, cache\n",
     "        \n",
@@ -137,9 +137,11 @@
     "        else:\n",
     "            return dropout(self, A, self.drop_prob)[0]\n",
     "\n",
+    "        \n",
     "    def relu(self, X):\n",
     "        return np.maximum(0, X)\n",
     "            \n",
+    "        \n",
     "    def dropout(self, A, prob):\n",
     "        \"\"\"\n",
     "        :param A: \n",
@@ -154,6 +156,7 @@
     "        \n",
     "        return A, M\n",
     "\n",
+    "    \n",
     "    def forwardPropagation(self, X):\n",
     "        \"\"\"\n",
     "        Runs an input X through the neural network to compute activations\n",
@@ -165,19 +168,22 @@
     "            cache is cached values for each layer that\n",
     "                     are needed in further steps\n",
     "        \"\"\"\n",
-    "\n",
+    "        \n",
+    "        layer_dimensions = [X.shape[0]] + layer_dimensions\n",
     "        weights = self.weights\n",
     "        biases = self.biases\n",
     "        \n",
     "        cache = []\n",
-    "        AL = X #do we have to activate X before running as well?\n",
+    "        AL = X\n",
+    "        \n",
     "        for i in range(self.num_layers):\n",
     "            h, c = affineForward(AL, weights[i], biases[i])\n",
     "            cache.append(c)\n",
     "            AL = activationForward(h)\n",
-    "        \n",
+    "            \n",
     "        return AL, cache\n",
-    "    \n",
+    "\n",
+    "\n",
     "    def costFunction(self, AL, y):\n",
     "        \"\"\"\n",
     "        :param AL: Activation of last layer, shape (num_classes, S)\n",
@@ -193,6 +199,7 @@
     "        \n",
     "        # gradient of cost\n",
     "        dAL =\n",
+    "        \n",
     "        return cost, dAL\n",
     "\n",
     "    def affineBackward(self, dA_prev, cache):\n",
@@ -214,6 +221,7 @@
     "        dA = dA_prev.dot(dW.T).reshape(A.shape[0])\n",
     "        dW = A.reshape(A.shape[0], -1).T.dot(dA_prev)\n",
     "        db = np.sum(dA_prev, axis = 0)\n",
+    "        \n",
     "        return dA, dW, db\n",
     "\n",
     "    def activationBackward(self, dA, cache, activation=\"relu\"):\n",
@@ -307,6 +315,114 @@
     "        y_batch = y[idx]\n",
     "\n",
     "        return X_batch, y_batch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-10-04T02:04:58.446217",
+     "start_time": "2017-10-04T02:04:58.400173"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[   0.            0.            0.            0.            0.            0.        ]\n",
+      " [ 103.1085586     5.35136083  278.27688342  116.78134253  152.49742492\n",
+      "    83.04408723]\n",
+      " [   0.           54.79426492    0.            0.            0.            0.        ]\n",
+      " [  92.90431599    0.          138.87006415  365.65304296    0.\n",
+      "    32.31985321]]\n",
+      "6.01835826358e+44\n",
+      "6.0185810208e+44\n",
+      "0.999962988416\n",
+      "6.26392997788e+23\n",
+      "6.26392997788e+23\n",
+      "1.0\n",
+      "7.14685403557e+120\n",
+      "7.14685403557e+120\n",
+      "1.0\n",
+      "1.0\n",
+      "6.32555806257e+158\n",
+      "1.58088818427e-159\n",
+      "1.0\n",
+      "1.69351928192e+66\n",
+      "5.90486338523e-67\n",
+      "1.0\n",
+      "1.16302442963e+36\n",
+      "8.59827166584e-37\n",
+      "[3.7012268725345589e-05, -0.0, -0.0, 365.6530429550163, 152.49742491665836, 83.044087226806127]\n",
+      "601.194592111\n"
+     ]
+    }
+   ],
+   "source": [
+    "def affineForward(A, W, b):\n",
+    "\n",
+    "    Z = np.matmul(W, A) + b\n",
+    "    cache = [A,W,b]\n",
+    "        \n",
+    "    return Z, cache\n",
+    "    \n",
+    "def forwardPropagation(X):\n",
+    "    layer_dimensions = [20, 100, 50, 4]\n",
+    "    num_layers = len(layer_dimensions)\n",
+    "    layer_dimensions = [X.shape[0]] + layer_dimensions\n",
+    "    weights = [np.random.randn(layer_dimensions[layer + 1], layer_dimensions[layer]) for layer in range(num_layers)]\n",
+    "    biases = [np.random.randn(layer, 1) for layer in layer_dimensions[1:]]\n",
+    "    cache = []\n",
+    "    AL = X #do we have to activate X before running as well?\n",
+    "    for i in range(num_layers):\n",
+    "        h, c = affineForward(AL, weights[i], biases[i])\n",
+    "        cache.append(c)\n",
+    "        AL = activationForward(h)\n",
+    "    \n",
+    "    return AL, cache\n",
+    "\n",
+    "def activationForward(A, activation=\"relu\"):\n",
+    "       \n",
+    "    if activation == 'relu':\n",
+    "        return relu(dropout(A, 0)[0])\n",
+    "    else:\n",
+    "        return dropout(A, 0)[0]\n",
+    "\n",
+    "def relu(X):\n",
+    "    return np.maximum(0, X)\n",
+    "\n",
+    "def dropout(A, prob):\n",
+    "\n",
+    "    M = np.random.binomial(1, 1 - prob, A.shape)\n",
+    "    A = M*A\n",
+    "        \n",
+    "    return A, M\n",
+    "\n",
+    "def costFunction(AL, y):\n",
+    "        \"\"\"\n",
+    "        :param AL: Activation of last layer, shape (num_classes, S)\n",
+    "        :param y: labels, shape (S)\n",
+    "        :param alpha: regularization parameter\n",
+    "        :returns cost, dAL: A scalar denoting cost and the gradient of cost\n",
+    "        \"\"\"\n",
+    "        # compute loss\n",
+    "        \n",
+    "        softmax = list()\n",
+    "        for sample in range(AL.shape[1]):\n",
+    "            print(np.exp(AL[y[sample], sample]))\n",
+    "            print(np.sum(np.exp(AL[:, sample])))\n",
+    "            print(np.exp(AL[y[sample], sample])/np.sum(np.exp(AL[:, sample])))\n",
+    "            softmax.append(-np.log(np.exp(AL[y[sample], sample])/np.sum(np.exp(AL[:, sample]))))\n",
+    "        print(softmax)\n",
+    "        return sum(softmax)\n",
+    "\n",
+    "X = np.random.randn(4, 6)\n",
+    "y = np.array([1, 2, 1, 0, 3, 0])\n",
+    "z = forwardPropagation(X)[0]\n",
+    "print(z)\n",
+    "print(costFunction(z, y))"
    ]
   },
   {
