implemented vectorized costFunction

--- a/HW1/HW1-uni.ipynb
+++ b/HW1/HW1-uni.ipynb
@@ -196,6 +196,10 @@
     "        if self.reg_lambda > 0:\n",
     "            # add regularization\n",
     "       \n",
+    "        numerators = np.exp(X[y, np.arange(y.shape[0])])\n",
+    "        denominators = np.sum(np.exp(X), axis=0)\n",
+    "        \n",
+    "        cost = sum(-np.log(numerators/denominators))\n",
     "        \n",
     "        # gradient of cost\n",
     "        dAL =\n",
@@ -319,11 +323,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 143,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-04T02:04:58.446217",
-     "start_time": "2017-10-04T02:04:58.400173"
+     "end_time": "2017-10-04T03:03:18.097484",
+     "start_time": "2017-10-04T03:03:18.061450"
     }
    },
    "outputs": [
@@ -331,32 +335,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[   0.            0.            0.            0.            0.            0.        ]\n",
-      " [ 103.1085586     5.35136083  278.27688342  116.78134253  152.49742492\n",
-      "    83.04408723]\n",
-      " [   0.           54.79426492    0.            0.            0.            0.        ]\n",
-      " [  92.90431599    0.          138.87006415  365.65304296    0.\n",
-      "    32.31985321]]\n",
-      "6.01835826358e+44\n",
-      "6.0185810208e+44\n",
-      "0.999962988416\n",
-      "6.26392997788e+23\n",
-      "6.26392997788e+23\n",
-      "1.0\n",
-      "7.14685403557e+120\n",
-      "7.14685403557e+120\n",
-      "1.0\n",
-      "1.0\n",
-      "6.32555806257e+158\n",
-      "1.58088818427e-159\n",
-      "1.0\n",
-      "1.69351928192e+66\n",
-      "5.90486338523e-67\n",
-      "1.0\n",
-      "1.16302442963e+36\n",
-      "8.59827166584e-37\n",
-      "[3.7012268725345589e-05, -0.0, -0.0, 365.6530429550163, 152.49742491665836, 83.044087226806127]\n",
-      "601.194592111\n"
+      "[[   6.31729407    0.            0.          287.51565015    0.\n",
+      "   353.73907008]\n",
+      " [ 279.0002916   746.17159706  813.19123657  706.86742116  764.29415644\n",
+      "   626.96247963]\n",
+      " [   0.            0.            0.            0.            0.            0.        ]\n",
+      " [ 348.3216389   567.12755548  439.94904344  496.26449085  482.62854408\n",
+      "   695.64305073]]\n",
+      "15.574543096\n"
      ]
     }
    ],
@@ -409,20 +395,85 @@
     "        \"\"\"\n",
     "        # compute loss\n",
     "        \n",
-    "        softmax = list()\n",
-    "        for sample in range(AL.shape[1]):\n",
-    "            print(np.exp(AL[y[sample], sample]))\n",
-    "            print(np.sum(np.exp(AL[:, sample])))\n",
-    "            print(np.exp(AL[y[sample], sample])/np.sum(np.exp(AL[:, sample])))\n",
-    "            softmax.append(-np.log(np.exp(AL[y[sample], sample])/np.sum(np.exp(AL[:, sample]))))\n",
-    "        print(softmax)\n",
-    "        return sum(softmax)\n",
+    "        return sum(-np.log(np.exp(X[y, np.arange(y.shape[0])])/np.sum(np.exp(X), axis=0)))\n",
     "\n",
     "X = np.random.randn(4, 6)\n",
     "y = np.array([1, 2, 1, 0, 3, 0])\n",
     "z = forwardPropagation(X)[0]\n",
     "print(z)\n",
     "print(costFunction(z, y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-10-04T02:58:51.999092",
+     "start_time": "2017-10-04T02:58:51.995089"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3  4  5]\n",
+      " [12 13 14 15 16 17]\n",
+      " [ 2  3  4  5  6  7]\n",
+      " [ 5  6  7  8  9 10]]\n",
+      "[12  3 14  3  9  5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = np.array([range(6), np.arange(12, 18), np.arange(2, 8), np.arange(5, 11)])\n",
+    "y = np.array([1, 2, 1, 0, 3, 0])\n",
+    "print(X)\n",
+    "print(X[y, np.arange(y.shape[0])])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-10-04T03:05:19.455430",
+     "start_time": "2017-10-04T03:05:19.444420"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 2 3 4 5]\n",
+      " [0 1 2 3 4 5]\n",
+      " [2 3 4 5 6 7]\n",
+      " [2 3 4 5 6 7]]\n",
+      "[   1.           20.08553692    7.3890561    20.08553692  403.42879349\n",
+      "  148.4131591 ]\n",
+      "[   16.7781122     45.6076375    123.97441226   336.99739205   916.05388705\n",
+      "  2490.09263506]\n",
+      "[ 0.05960146  0.44039854  0.05960146  0.05960146  0.44039854  0.05960146]\n",
+      "12.9204511496\n",
+      "12.9204511496\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = np.array([range(6), range(6), np.arange(2, 8), np.arange(2, 8)])\n",
+    "y = np.array([1, 2, 1, 0, 3, 0])\n",
+    "print(X)\n",
+    "print(np.exp(X[y, np.arange(y.shape[0])]))\n",
+    "print(np.sum(np.exp(X), axis=0))\n",
+    "print(np.exp(X[y, np.arange(y.shape[0])])/np.sum(np.exp(X), axis=0))\n",
+    "print(sum(-np.log(np.exp(X[y, np.arange(y.shape[0])])/np.sum(np.exp(X), axis=0))))\n",
+    "numerators = np.exp(X[y, np.arange(y.shape[0])])\n",
+    "denominators = np.sum(np.exp(X), axis=0)\n",
+    "        \n",
+    "cost = sum(-np.log(numerators/denominators))\n",
+    "print(cost)"
    ]
   },
   {
