update minibatch to shuffle data and then sample consecutive minibatches

--- a/HW1/HW1-uni.ipynb
+++ b/HW1/HW1-uni.ipynb
@@ -282,9 +282,14 @@
     "        :param print_every: no. of iterations to print debug info after\n",
     "        \"\"\"\n",
     "        \n",
+    "        #randomize X and y\n",
+    "        tmp = list(zip(X,y))\n",
+    "        np.random.shuffle(tmp)\n",
+    "        X,y = zip(*tmp)\n",
+    "        \n",
     "        for i in range(0, iters):\n",
     "            # get minibatch\n",
-    "            minibatch = get_batch(X,y,batch_size)\n",
+    "            minibatch = get_batch(X, y, i*batch_size, batch_size)\n",
     "            \n",
     "            # forward prop\n",
     "\n",
@@ -304,7 +309,7 @@
     "\n",
     "        return y_pred\n",
     "\n",
-    "    def get_batch(self, X, y, batch_size):\n",
+    "    def get_batch(self, X, y, start_index, batch_size):\n",
     "        \"\"\"\n",
     "        Return minibatch of samples and labels\n",
     "        \n",
@@ -312,11 +317,9 @@
     "        :parma batch_size: minibatch size\n",
     "        :returns: (tuple) X_batch, y_batch\n",
     "        \"\"\"\n",
-    "        num_samples = len(X[0])\n",
-    "        idx = np.random.randint(num_samples, size=batch_size)\n",
-    "        \n",
-    "        X_batch = X[:,idx]\n",
-    "        y_batch = y[idx]\n",
+    "        end_index = start_index + batch_size\n",
+    "        X_batch = X[:,start_index:end_index]\n",
+    "        y_batch = y[start_index:end_index]\n",
     "\n",
     "        return X_batch, y_batch"
    ]
@@ -739,7 +742,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -753,7 +756,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
