update minibatch to handle non-multiple case

--- a/HW1/HW1-uni.ipynb
+++ b/HW1/HW1-uni.ipynb
@@ -317,9 +317,17 @@
     "        :parma batch_size: minibatch size\n",
     "        :returns: (tuple) X_batch, y_batch\n",
     "        \"\"\"\n",
+    "        num_samples = len(y)\n",
+    "        \n",
     "        end_index = start_index + batch_size\n",
-    "        X_batch = X[:,start_index:end_index]\n",
-    "        y_batch = y[start_index:end_index]\n",
+    "        if(end_index <= num_samples):\n",
+    "            X_batch = X[:,start_index:end_index]\n",
+    "            y_batch = y[start_index:end_index]\n",
+    "        else:\n",
+    "            num_needed = end_index - num_samples\n",
+    "            idx = np.random.randint(num_samples, size=num_needed)\n",
+    "            X_batch = X[:,start_index:num_samples] + X[:,idx]\n",
+    "            y_batch = y[start_index:num_samples] + y[idx]\n",
     "\n",
     "        return X_batch, y_batch"
    ]
