costFunction now returns average loss, minibatch adjusted for labels in array form, random samples are selected in the range 0 to start_index + 1

--- a/HW1/HW1-uni.ipynb
+++ b/HW1/HW1-uni.ipynb
@@ -36,11 +36,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 150,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-04T00:48:45.550979",
-     "start_time": "2017-10-04T00:48:45.512943"
+     "end_time": "2017-10-05T00:08:27.573373",
+     "start_time": "2017-10-05T00:08:27.549851"
     },
     "collapsed": true,
     "run_control": {
@@ -195,11 +195,11 @@
     "        \n",
     "        if self.reg_lambda > 0:\n",
     "            # add regularization\n",
-    "       \n",
-    "        numerators = np.exp(X[y, np.arange(y.shape[0])])\n",
-    "        denominators = np.sum(np.exp(X), axis=0)\n",
     "        \n",
-    "        cost = sum(-np.log(numerators/denominators))\n",
+    "        elif self.reg_lambda == 0:\n",
+    "            numerators = np.exp(X[y, np.arange(y.shape[0])])\n",
+    "            denominators = np.sum(np.exp(X), axis=0)\n",
+    "            cost = sum(-np.log(numerators/denominators))/X.shape[1]\n",
     "        \n",
     "        # gradient of cost\n",
     "        dAL =\n",
@@ -283,13 +283,14 @@
     "        \"\"\"\n",
     "        \n",
     "        #randomize X and y\n",
-    "        tmp = list(zip(X,y))\n",
-    "        np.random.shuffle(tmp)\n",
-    "        X,y = zip(*tmp)\n",
+    "        tmp = np.vstack((X, y.reshape(1, y.shape[0])))\n",
+    "        np.random.shuffle(tmp.T)\n",
+    "        X_shuffle = tmp[:-1, :]\n",
+    "        y_shuffle = tmp[-1]\n",
     "        \n",
     "        for i in range(0, iters):\n",
     "            # get minibatch\n",
-    "            minibatch = get_batch(X, y, i*batch_size, batch_size)\n",
+    "            minibatch = get_batch(X_shuffle, y_shuffle, i*batch_size, batch_size)\n",
     "            \n",
     "            # forward prop\n",
     "\n",
@@ -317,19 +318,20 @@
     "        :parma batch_size: minibatch size\n",
     "        :returns: (tuple) X_batch, y_batch\n",
     "        \"\"\"\n",
-    "        num_samples = len(y)\n",
-    "        \n",
+    "        num_samples = y.shape[0]\n",
     "        end_index = start_index + batch_size\n",
-    "        if(end_index <= num_samples):\n",
-    "            X_batch = X[:,start_index:end_index]\n",
+    "        \n",
+    "        if end_index <= num_samples:\n",
+    "            X_batch = X[:, start_index:end_index]\n",
     "            y_batch = y[start_index:end_index]\n",
     "        else:\n",
     "            num_needed = end_index - num_samples\n",
-    "            idx = np.random.randint(num_samples, size=num_needed)\n",
-    "            X_batch = X[:,start_index:num_samples] + X[:,idx]\n",
-    "            y_batch = y[start_index:num_samples] + y[idx]\n",
+    "            idx = np.random.randint(low=0, high=start_index + 1, size=num_needed)\n",
+    "            X_batch = np.hstack((X[:, start_index:num_samples], X[:, idx]))\n",
+    "            y_batch = np.hstack((y[start_index:num_samples], y[idx]))\n",
     "\n",
-    "        return X_batch, y_batch"
+    "        return X_batch, y_batch\n",
+    "    "
    ]
   },
   {
@@ -339,6 +341,10 @@
     "ExecuteTime": {
      "end_time": "2017-10-04T03:03:18.097484",
      "start_time": "2017-10-04T03:03:18.061450"
+    },
+    "run_control": {
+     "frozen": false,
+     "read_only": false
     }
    },
    "outputs": [
@@ -422,6 +428,10 @@
     "ExecuteTime": {
      "end_time": "2017-10-04T02:58:51.999092",
      "start_time": "2017-10-04T02:58:51.995089"
+    },
+    "run_control": {
+     "frozen": false,
+     "read_only": false
     }
    },
    "outputs": [
@@ -446,11 +456,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 188,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-04T03:05:19.455430",
-     "start_time": "2017-10-04T03:05:19.444420"
+     "end_time": "2017-10-05T00:58:30.571677",
+     "start_time": "2017-10-05T00:58:30.558664"
+    },
+    "run_control": {
+     "frozen": false,
+     "read_only": false
     }
    },
    "outputs": [
@@ -458,33 +472,128 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0 1 2 3 4 5]\n",
-      " [0 1 2 3 4 5]\n",
-      " [2 3 4 5 6 7]\n",
-      " [2 3 4 5 6 7]]\n",
-      "[   1.           20.08553692    7.3890561    20.08553692  403.42879349\n",
-      "  148.4131591 ]\n",
-      "[   16.7781122     45.6076375    123.97441226   336.99739205   916.05388705\n",
-      "  2490.09263506]\n",
-      "[ 0.05960146  0.44039854  0.05960146  0.05960146  0.44039854  0.05960146]\n",
-      "12.9204511496\n",
-      "12.9204511496\n"
+      "[[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19]\n",
+      " [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19]\n",
+      " [ 2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21]\n",
+      " [ 2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21]]\n",
+      "[3 1 3 1 2 0 0 2 0 3 0 0 2 0 2 1 0 2 2 1]\n",
+      "[  7.38905610e+00   2.71828183e+00   5.45981500e+01   2.00855369e+01\n",
+      "   4.03428793e+02   1.48413159e+02   4.03428793e+02   8.10308393e+03\n",
+      "   2.98095799e+03   5.98741417e+04   2.20264658e+04   5.98741417e+04\n",
+      "   1.20260428e+06   4.42413392e+05   8.88611052e+06   3.26901737e+06\n",
+      "   8.88611052e+06   1.78482301e+08   4.85165195e+08   1.78482301e+08]\n",
+      "[  1.67781122e+01   4.56076375e+01   1.23974412e+02   3.36997392e+02\n",
+      "   9.16053887e+02   2.49009264e+03   6.76877356e+03   1.83994342e+04\n",
+      "   5.00148476e+04   1.35954451e+05   3.69562514e+05   1.00457507e+06\n",
+      "   2.73071815e+06   7.42286153e+06   2.01774296e+07   5.48479403e+07\n",
+      "   1.49092159e+08   4.05274507e+08   1.10165033e+09   2.99459607e+09]\n",
+      "[ 0.44039854  0.05960146  0.44039854  0.05960146  0.44039854  0.05960146\n",
+      "  0.05960146  0.44039854  0.05960146  0.44039854  0.05960146  0.05960146\n",
+      "  0.44039854  0.05960146  0.44039854  0.05960146  0.05960146  0.44039854\n",
+      "  0.44039854  0.05960146]\n",
+      "38.4015038321\n",
+      "20\n",
+      "1.9200751916\n"
      ]
     }
    ],
    "source": [
-    "X = np.array([range(6), range(6), np.arange(2, 8), np.arange(2, 8)])\n",
-    "y = np.array([1, 2, 1, 0, 3, 0])\n",
+    "X = np.array([range(20), range(20), np.arange(2, 22), np.arange(2, 22)])\n",
+    "y = np.random.randint(low=0, high=4, size=(20))\n",
     "print(X)\n",
+    "print(y)\n",
     "print(np.exp(X[y, np.arange(y.shape[0])]))\n",
     "print(np.sum(np.exp(X), axis=0))\n",
     "print(np.exp(X[y, np.arange(y.shape[0])])/np.sum(np.exp(X), axis=0))\n",
     "print(sum(-np.log(np.exp(X[y, np.arange(y.shape[0])])/np.sum(np.exp(X), axis=0))))\n",
     "numerators = np.exp(X[y, np.arange(y.shape[0])])\n",
     "denominators = np.sum(np.exp(X), axis=0)\n",
-    "        \n",
-    "cost = sum(-np.log(numerators/denominators))\n",
+    "print(X.shape[1])\n",
+    "cost = sum(-np.log(numerators/denominators))/X.shape[1]\n",
     "print(cost)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-10-05T01:10:23.665396",
+     "start_time": "2017-10-05T01:10:23.640372"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0 12 15  3  8 16  7  5 11 10 14  6  2  4 18 19 13  9 17  1]\n",
+      " [ 0 12 15  3  8 16  7  5 11 10 14  6  2  4 18 19 13  9 17  1]\n",
+      " [ 2 14 17  5 10 18  9  7 13 12 16  8  4  6 20 21 15 11 19  3]\n",
+      " [ 2 14 17  5 10 18  9  7 13 12 16  8  4  6 20 21 15 11 19  3]]\n",
+      "[3 2 1 1 0 0 2 0 0 0 2 0 3 2 2 1 0 3 2 1]\n",
+      "0\n",
+      "(array([[ 0, 12, 15,  3,  8, 16],\n",
+      "       [ 0, 12, 15,  3,  8, 16],\n",
+      "       [ 2, 14, 17,  5, 10, 18],\n",
+      "       [ 2, 14, 17,  5, 10, 18]]), array([3, 2, 1, 1, 0, 0]))\n",
+      "1\n",
+      "(array([[ 7,  5, 11, 10, 14,  6],\n",
+      "       [ 7,  5, 11, 10, 14,  6],\n",
+      "       [ 9,  7, 13, 12, 16,  8],\n",
+      "       [ 9,  7, 13, 12, 16,  8]]), array([2, 0, 0, 0, 2, 0]))\n",
+      "2\n",
+      "(array([[ 2,  4, 18, 19, 13,  9],\n",
+      "       [ 2,  4, 18, 19, 13,  9],\n",
+      "       [ 4,  6, 20, 21, 15, 11],\n",
+      "       [ 4,  6, 20, 21, 15, 11]]), array([3, 2, 2, 1, 0, 3]))\n",
+      "3\n",
+      "[ 9  0 11  7]\n",
+      "(array([[17,  1, 10,  0,  6,  5],\n",
+      "       [17,  1, 10,  0,  6,  5],\n",
+      "       [19,  3, 12,  2,  8,  7],\n",
+      "       [19,  3, 12,  2,  8,  7]]), array([2, 1, 0, 3, 0, 0]))\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_batch(X, y, start_index, batch_size):\n",
+    "\n",
+    "    num_samples = y.shape[0]\n",
+    "        \n",
+    "    end_index = start_index + batch_size\n",
+    "    if end_index <= num_samples:\n",
+    "        X_batch = X[:, start_index:end_index]\n",
+    "        y_batch = y[start_index:end_index]\n",
+    "    else:\n",
+    "        num_needed = end_index - num_samples\n",
+    "        idx = np.random.randint(low=0, high=start_index + 1, size=num_needed)\n",
+    "        X_batch = np.hstack((X[:, start_index:num_samples], X[:, idx]))\n",
+    "        y_batch = np.hstack((y[start_index:num_samples], y[idx]))\n",
+    "\n",
+    "    return X_batch, y_batch\n",
+    "\n",
+    "tmp = np.vstack((X, y.reshape(1, y.shape[0])))\n",
+    "\n",
+    "np.random.shuffle(tmp.T)\n",
+    "X_shuffle = tmp[:-1, :]\n",
+    "y_shuffle = tmp[-1]\n",
+    "\n",
+    "for i in range(0, 4):\n",
+    "            # get minibatch\n",
+    "    minibatch = get_batch(X_shuffle, y_shuffle, i*6, 6)\n",
+    "\n",
+    "            \n",
+    "            # forward prop\n",
+    "\n",
+    "            # compute loss\n",
+    "\n",
+    "            # compute gradients\n",
+    "\n",
+    "            # update weights and biases based on gradient\n",
+    "\n",
+    "        #if i % print_every == 0:\n",
+    "                # print cost, train and validation set accuracies\n"
    ]
   },
   {
@@ -750,7 +859,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -764,7 +873,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
